// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`VolumeControls Component > matches snapshot at default volume 1`] = `
<DocumentFragment>
  <div
    class="flex items-center gap-4 w-full"
  >
    <svg
      class="lucide lucide-volume2 w-6 h-6 text-lightPurple"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M11 4.702a.705.705 0 0 0-1.203-.498L6.413 7.587A1.4 1.4 0 0 1 5.416 8H3a1 1 0 0 0-1 1v6a1 1 0 0 0 1 1h2.416a1.4 1.4 0 0 1 .997.413l3.383 3.384A.705.705 0 0 0 11 19.298z"
      />
      <path
        d="M16 9a5 5 0 0 1 0 6"
      />
      <path
        d="M19.364 18.364a9 9 0 0 0 0-12.728"
      />
    </svg>
     
    <input
      aria-label="Volume Control"
      class="w-full h-2 bg-blackSlider rounded-lg appearance-none focus:outline-none focus:ring-2 focus:ring-lightPurple"
      max="100"
      min="0"
      type="range"
      value="50"
    />
    <span
      class="text-sm text-lightPurple font-coolFont"
    >
      50%
    </span>
     
  </div>
</DocumentFragment>
`;

exports[`VolumeControls Component > matches snapshot at low volume 1`] = `
<DocumentFragment>
  <div
    class="flex items-center gap-4 w-full"
  >
    <svg
      class="lucide lucide-volume2 w-6 h-6 text-lightPurple"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M11 4.702a.705.705 0 0 0-1.203-.498L6.413 7.587A1.4 1.4 0 0 1 5.416 8H3a1 1 0 0 0-1 1v6a1 1 0 0 0 1 1h2.416a1.4 1.4 0 0 1 .997.413l3.383 3.384A.705.705 0 0 0 11 19.298z"
      />
      <path
        d="M16 9a5 5 0 0 1 0 6"
      />
      <path
        d="M19.364 18.364a9 9 0 0 0 0-12.728"
      />
    </svg>
     
    <input
      aria-label="Volume Control"
      class="w-full h-2 bg-blackSlider rounded-lg appearance-none focus:outline-none focus:ring-2 focus:ring-lightPurple"
      max="100"
      min="0"
      type="range"
      value="10"
    />
    <span
      class="text-sm text-lightPurple font-coolFont"
    >
      10%
    </span>
     
  </div>
</DocumentFragment>
`;

exports[`VolumeControls Component > matches snapshot at max volume 1`] = `
<DocumentFragment>
  <div
    class="flex items-center gap-4 w-full"
  >
    <svg
      class="lucide lucide-volume2 w-6 h-6 text-lightPurple"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M11 4.702a.705.705 0 0 0-1.203-.498L6.413 7.587A1.4 1.4 0 0 1 5.416 8H3a1 1 0 0 0-1 1v6a1 1 0 0 0 1 1h2.416a1.4 1.4 0 0 1 .997.413l3.383 3.384A.705.705 0 0 0 11 19.298z"
      />
      <path
        d="M16 9a5 5 0 0 1 0 6"
      />
      <path
        d="M19.364 18.364a9 9 0 0 0 0-12.728"
      />
    </svg>
     
    <input
      aria-label="Volume Control"
      class="w-full h-2 bg-blackSlider rounded-lg appearance-none focus:outline-none focus:ring-2 focus:ring-lightPurple"
      max="100"
      min="0"
      type="range"
      value="100"
    />
    <span
      class="text-sm text-lightPurple font-coolFont"
    >
      100%
    </span>
     
  </div>
</DocumentFragment>
`;
